  When locating the separating "," any variable reference (single char as well
  as using $() or ${}) is skipped.  However parentheses that are not part of
  or contained in variable references will not be counted.  This means that
  things like "ifeq ((foo,bar),)" are now syntax errors.  Use a variable to
  hide the comma if needed: "COMMA = ," / "ifeq ((foo$(COMMA)bar),)".

* NOTE: Deprecated behavior.
  The check in GNU Make 4.3 for suffix rules with prerequisites didn't check
  single-suffix rules, only double-suffix rules.  Add the missing check.

* New feature: Any assignment operator can be made conditional
  GNU Make has long supported the conditional operator "?=" which creates a
  recursive variable set to a value if and only if the variable is not already
  defined.  In this release, the "?" can precede any assignment operator to
  make it conditional.  For example, "?:=" creates a simply-expanded variable
  and expands the right-hand side if and only if the variable is not already
  defined.  The constructs "?::=", "?:::=", and "?!=" also behave as expected.

* New feature: Unload function for loaded objects
  When a loaded object needs to be unloaded by GNU Make, it will invoke an
  unload function (if one is defined) beforehand that allows the object to
  perform cleanup operations.
  Original idea and implementation: Dmitry Goncharov <dgoncharov@users.sf.net>

* New feature: Makefile warning reporting control
  A new option "--warn" controls reporting of warnings for makefiles.  Actions
  can be set to "ignore", "warn", or "error".  Two new warnings are reported:
  assigning to invalid variable names, and referencing invalid variable names
  (both set to "warn" by default), in addition to the existing warning for
  undefined variables (defaults to "ignore"). "--warn-undefined-variables" is
  deprecated, and is translated to "--warn=undefined-vars" internally.

* New feature: Control warnings with the .WARNINGS variable